# Insect-Tower_Defense

./: .directory  .gitignore  .gitignore.orig  CMakeLists.txt  OpenGL  README.md  query.json
archive/check-itd-file/: itd-file.c
archive/monster/: cases.c
archive/monster-map/: place-map.c
check-itd-file/: level1.itd  main.c
level/: OLIVIER.itd  OLIVIER.ppm  STEEVE.itd  level1.itd  level2.itd  level2.ppm  level3.itd
load-ppm/: ppm-loader.c
place-map/: place-map.c
src/: cases.c  cases.h  display.c  display.h  gui.c  itd-file.c  itineraire.c  keyboard.c  mouse.c  player.c  sound.c  sprite.c  structures.h  tour.c
src/GUI/: GUI.c  GUI.h  _main.c  a.out  cases.c  cases.h  display.c  display.h  mouse.c  mouse.h  structures.h
src/Sprite/: _main.c  a.out  animation.c  animation.h  structures.h
src/check-itd-file/: itd-file.c  itd-file.h
src/initmap/: SDLConfig.c  SDLConfig.h  _main.c  cases.c  cases.h  display.c  display.h  drawMonster.c  drawMonster.h  gui.c  gui.h  itd-file.c  itd-file.h  itineraire.c  itineraire.h  keyboard.c  keyboard.h  level1.itd  main.c  monster.c  monster.h  mouse.c  mouse.h  player.c  player.h  ppm-loader.c  ppm-loader.h  projectile.c  projectile.h  short-path-algo.c  short-path-algo.h  sound.c  sound.h  sprite.c  sprite.h  structures.h  tour.c  tour.h  waves.c  waves.h
src/load-ppm/: lol.ppm  main.c  ppm-loader.h
src/main/: draw.c  main.c
src/monster/: main.c  monster.c  monster.h
src/place-map/: cases.h  display.c  display.h  place-map.c
src/place-mapv2/: README.md  cases.c  cases.h  display.c  display.h  main.c  player.c  (+3 more)
(+4 files in other folders)
